--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <footer>
     <div class="first-column">
-    <img class ="logo" src="images/logo.svg">
+    <img class ="logo" src="images/logo-white.svg">
     <div class="divider">
      <img class="icon"  src="images/icon-location.svg">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti iure quam cumque assumenda labore </p>
